Added in Notes for the rest of the course.

--- a/Section 15 - Deployment/.ebextensions/django.config
+++ b/Section 15 - Deployment/.ebextensions/django.config
@@ -1,3 +1,8 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: my_site.wsgi:application
+# *NOTES*
+# This configuration file sets the WSGI path for the Django application.
+# `WSGIPath` specifies the entry point for the WSGI application, which is `my_site.wsgi:application`.
+# This is required by AWS Elastic Beanstalk to correctly run the Django application.
+# https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/create-deploy-python-django.html
