--- a/Section 15 - Deployment/.ebextensions/static-files.config
+++ b/Section 15 - Deployment/.ebextensions/static-files.config
@@ -2,3 +2,10 @@ option_settings:
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: staticfiles
     /files: uploads
+# *NOTES*
+# This configuration file sets the static and media file paths for the AWS Elastic Beanstalk environment.
+# `aws:elasticbeanstalk:environment:proxy:staticfiles` specifies the proxy server's static files mapping.
+# `/static: staticfiles` maps the `/static` URL path to the `staticfiles` directory.
+# `/files: uploads` maps the `/files` URL path to the `uploads` directory.
+# These mappings are necessary for the Elastic Beanstalk environment to correctly serve static and media files.
+# https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/python-configuration-files.html
